# hackchrono-dm

./: README.md
backend/: .env  notex.txt  pyproject.toml  requirements.txt
backend/src/: main.py
backend/src/config/: db.py
backend/src/controllers/: prediction_controller.py
backend/src/models/: auth_model.py
backend/src/routes/: auth_routes.py  prediction_routes.py
backend/src/schemas/: auth_schema.py  prediction_schema.py
backend/src/services/: disaster_prediction.py
flask_backend/: .env  app.py  prompt.py
frontend/: .firebaserc  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/.firebase/: hosting.ZGlzdA.cache
frontend/src/: App.tsx  main.tsx
frontend/src/api/: api.ts
frontend/src/components/: HomePage.tsx  Login.tsx  Signup.tsx  jarvis.jsx
frontend/src/components/Dashboard/: Dashboard.tsx  Threeview.tsx  compo.jsx  gis.jsx  notes.yaml  style.css  whatif.jsx
frontend/src/store/: auth.store.ts  protectRoute.tsx
mern-backend/: .env  csvprocessor.js  package-lock.json  package.json  server.js
